--- a/Aquatico.html
+++ b/Aquatico.html
@@ -19,7 +19,7 @@
 
 
 <div class="card">
-<img src="fotos/Foca.JPG" alt="Foca">
+<img src="Fotos/Foca.jpg" alt="Foca">
 <div class="card-body">
 <div class="animal-name">Foca</div>
 <div class="animal-desc">Elas dormem embaixo da água, elas boiam ou presas em gelo subindo só para respirar</div>
@@ -28,7 +28,7 @@
 
 
 <div class="card">
-<img src="fotos/Lontra.JPG" alt="Lontra">
+<img src="Fotos/Lontra.jpg" alt="Lontra">
 <div class="card-body">
 <div class="animal-name">Lontra</div>
 <div class="animal-desc">Usam pedras como ferramentas, como para abrir conchas, batendo como se fosse um martelo.</div>
@@ -37,7 +37,7 @@
 
 
 <div class="card">
-<img src="fotos/Tartaruga.JPG" alt="tartaruga">
+<img src="Fotos/Tartaruga.jpg" alt="tartaruga">
 <div class="card-body">
 <div class="animal-name">tartaruga</div>
 <div class="animal-desc">A carapaça faz parte do corpo, ele faz parte da coluna e das costelas da tartaruga.</div>
@@ -46,7 +46,7 @@
 
 
 <div class="card">
-<img src="fotos/Pinguim.JPG" alt="Pinguim">
+<img src="Fotos/Pinguim.jpg" alt="Pinguim">
 <div class="card-body">
 <div class="animal-name">Pinguim</div>
 <div class="animal-desc">Eles formam casais que ficam juntos por anos, e reconhecem o parceiro pelo som da voz.</div>
@@ -55,7 +55,7 @@
 
 
 <div class="card">
-<img src="fotos/AguaViva.JPG" alt="Agua Viva">
+<img src="Fotos/AguaViva.jpg" alt="Agua Viva">
 <div class="card-body">
 <div class="animal-name">Agua viva</div>
 <div class="animal-desc">elas nn possuem cerebro, nem coração e nem ossos, e mesmo assim conseguem nadar, caçar e reagir ao ambiente.</div>
@@ -64,7 +64,7 @@
 
 
 <div class="card">
-<img src="fotos/Polvo.JPG" alt="Polvo">
+<img src="Fotos/Polvo.jpg" alt="Polvo">
 <div class="card-body">
 <div class="animal-name">Polvo</div>
 <div class="animal-desc">O sangue do polvo é azul, a coloração vem por que o sangue usa cobre ao invés de ferro.</div>
@@ -72,7 +72,7 @@
 </div>
 
 <div class="card">
-<img src="fotos/Golfinho.JPG" alt="Golfinho">
+<img src="Fotos/Golfinho.jpg" alt="Golfinho">
 <div class="card-body">
 <div class="animal-name">Golfinho</div>
 <div class="animal-desc">um dos animais mais inteligentes do mundo.</div>
@@ -80,7 +80,7 @@
 </div>
 
 <div class="card">
-<img src="fotos/Jabuti.JFIF" alt="Jabuti">
+<img src="Fotos/JabutiDois.jfif" alt="Jabuti">
 <div class="card-body">
 <div class="animal-name">Jabuti</div>
 <div class="animal-desc">O jabuti é 100% terrestre, diferente da tartaruga, pois não nada bem.</div>
@@ -88,7 +88,7 @@
 </div>
  
 <div class="card">
-<img src="fotos/Orca.JPG" alt="Orca">
+<img src="Fotos/Orca.jpg" alt="Orca">
 <div class="card-body">
 <div class="animal-name">Orca</div>
 <div class="animal-desc">é uma caçadora perfeita, pois é um dos predadores mais inteligentes do planeta.</div>
