--- a/Centro.html
+++ b/Centro.html
@@ -11,19 +11,19 @@
     </div>
     <div class="image-container">
         <div class="QuadradoD">
-            <img src="Fotos/onca-pintada-nadando.JPEG" alt="Onça Pintada">
+            <img src="Fotos/onca-pintada-nadando.jpeg" alt="Onça Pintada">
         </div>
         <div class="QuadradoD">
-            <img src="Fotos/JiboiaDois.JFIF" alt="Jiboia">
+            <img src="Fotos/Jiboia.jfif" alt="Jiboia">
         </div>
         <div class="QuadradoD">
-            <img src="Fotos/Gorila.JFIF" alt="Gorila">
+            <img src="Fotos/Gorila.jfif" alt="Gorila">
         </div>
         <div class="QuadradoD">
-            <img src="Fotos/Capivara.JFIF" alt="Capivara">
+            <img src="Fotos/OlhoPapagaio.jfif" alt="Papagaio">
         </div>
         <div class="QuadradoD">
-            <img src="Fotos/PapagaioUm.JFIF" alt="Papagaio">
+            <img src="Fotos/AraraAzul.jfif" alt="Arara">
         </div>
     </div>
     <div class="caixaNova">
