--- a/Deserto.html
+++ b/Deserto.html
@@ -19,7 +19,7 @@
 
 
 <div class="card">
-<img src="fotos/Canguru.JPG" alt="Canguru">
+<img src="Fotos/Canguru.jpg" alt="Canguru">
 <div class="card-body">
 <div class="animal-name">Canguru</div>
 <div class="animal-desc">Eles tem uma <strong>Habilidade</strong> 
@@ -29,7 +29,7 @@ de lutas forte o suficiente para quebrar ossos humanos</div>
 
 
 <div class="card">
-<img src="fotos/Camelo.JPG" alt="Camelo">
+<img src="Fotos/Camelo.jpg" alt="Camelo">
 <div class="card-body">
 <div class="animal-name">Camelo</div>
 <div class="animal-desc">Eles podem ficar até 8 dias ou mais 
@@ -40,7 +40,7 @@ podem beber até <strong>120 litros</strong> em 10 minutos.</div>
 
 
 <div class="card">
-<img src="fotos/Raposa.JPG" alt="Raposa">
+<img src="Fotos/Raposa.jpg" alt="Raposa">
 <div class="card-body">
 <div class="animal-name">Raposa do deserto</div>
 <div class="animal-desc">A <strong>Audição</strong> delas 
@@ -50,7 +50,7 @@ permitem ouvir a movimentação de presas mesmo debaixo da areia.</div>
 
 
 <div class="card">
-<img src="fotos/Lagarto.JPG" alt="Lagarto">
+<img src="Fotos/Lagarto.jpg" alt="Lagarto">
 <div class="card-body">
 <div class="animal-name">Lagarto</div>
 <div class="animal-desc">Eles <strong>soltam a cauda</strong> 
@@ -60,7 +60,7 @@ em situações de <strong>Perigo</strong> para enganar o predador.</div>
 
 
 <div class="card">
-<img src="fotos/Vibora.JPG" alt="Víbora">
+<img src="Fotos/Vibora.jpg" alt="Víbora">
 <div class="card-body">
 <div class="animal-name">Víbora</div>
 <div class="animal-desc">possuem olhos com <strong>Pupila Vertical
@@ -71,7 +71,7 @@ luz.</div>
 
 
 <div class="card">
-<img src="fotos/Suricato.JPG" alt="Suricato">
+<img src="Fotos/Suricato.jpg" alt="Suricato">
 <div class="card-body">
 <div class="animal-name">Suricato</div>
 <div class="animal-desc">Não pesam nem 1 kilo, um suricato 
@@ -80,7 +80,7 @@ adultopesa cerca de <strong>700 gramas</strong>.</div>
 </div>
 
 <div class="card">
-<img src="fotos/Coruja.JPG" alt="Coruja">
+<img src="Fotos/Coruja.jpg" alt="Coruja">
 <div class="card-body">
 <div class="animal-name">Coruja</div>
 <div class="animal-desc">Tem o voo totalmente <strong>silencioso
@@ -90,7 +90,7 @@ caçar.</div>
 </div>
 
 <div class="card">
-<img src="fotos/Escorpiao.JPG" alt="Escorpião">
+<img src="Fotos/Escorpiao.jpg" alt="Escorpião">
 <div class="card-body">
 <div class="animal-name">Escorpião</div>
 <div class="animal-desc">São <strong>Fluorescentes</strong>
@@ -99,7 +99,7 @@ sob luz violeta, a casca deles reage e brilha em verde/azul.</div>
 </div>
  
 <div class="card">
-<img src="fotos/Abutre.JPG" alt="Abutre">
+<img src="Fotos/Abutre.jpg" alt="Abutre">
 <div class="card-body">
 <div class="animal-name">Abutre</div>
 <div class="animal-desc">tem uma visão excelente podendo enxergar carcaças e 
