--- a/Floresta.html
+++ b/Floresta.html
@@ -19,7 +19,7 @@
 
 
 <div class="card">
-<img src="fotos/OnçaPintada.JFIF" alt="Onça">
+<img src="Fotos/OnçaPintada.jfif" alt="Onça">
 <div class="card-body">
 <div class="animal-name">Onça Pintada</div>
 <div class="animal-desc"><strong>Maior</strong> felino das Américas e tem a mordida <strong>mais</strong> forte do mundo, podendo quebrar até cascos de tartaruga.</div>
@@ -28,7 +28,7 @@
 
 
 <div class="card">
-<img src="fotos/MacacoBanana.JFIF" alt="Macaco">
+<img src="Fotos/MacacoBanana.jfif" alt="Macaco">
 <div class="card-body">
 <div class="animal-name">Macaco-rhesus</div>
 <div class="animal-desc">São nadadores <strong> incriveis</strong>, e ja foram vistos nadando quase um quilômetro.</div>
@@ -37,7 +37,7 @@
 
 
 <div class="card">
-<img src="fotos/MaeGorila.JFIF" alt="Gorila">
+<img src="Fotos/Gorila.jfif" alt="Gorila">
 <div class="card-body">
 <div class="animal-name">Gorila</div>
 <div class="animal-desc">apesar do seu tamanho, em grande parte 
@@ -48,7 +48,7 @@ demonstram emoções como riso e tristeza.</div>
 
 
 <div class="card">
-<img src="fotos/Leao.JPG" alt="Leão">
+<img src="Fotos/Leao.jpg" alt="Leão">
 <div class="card-body">
 <div class="animal-name">Leão</div>
 <div class="animal-desc">Ele é considerado o Felino mais 
@@ -59,7 +59,7 @@ em grupos organizados.</div>
 
 
 <div class="card">
-<img src="fotos/Tigre.JPG" alt="Tigre">
+<img src="Fotos/Tigre.jpg" alt="Tigre">
 <div class="card-body">
 <div class="animal-name">Tigre</div>
 <div class="animal-desc">Eles possuem uma 
@@ -70,7 +70,7 @@ para desinfetá-las.</div>
 
 
 <div class="card">
-<img src="fotos/Urso.JPG" alt="Urso">
+<img src="Fotos/Urso.jpg" alt="Urso">
 <div class="card-body">
 <div class="animal-name">Urso Marrom</div>
 <div class="animal-desc">embora sejam caçadores hábeis, cerca de 80% 
@@ -79,7 +79,7 @@ de sua <strong>dieta</strong> consiste em <strong>plantas</strong>, folhas, raiz
 </div>
 
 <div class="card">
-<img src="fotos/Elefante.JPG" alt="Elefante">
+<img src="Fotos/Elefante.jpg" alt="Elefante">
 <div class="card-body">
 <div class="animal-name">Elefante da savana africana</div>
 <div class="animal-desc">A tromba é um orgão extremamente musculoso, 
@@ -88,7 +88,7 @@ contendo cerca de <strong>150.000</strong> unidades musculares</div>
 </div>
 
 <div class="card">
-<img src="fotos/Alce.JPG" alt="Alce">
+<img src="Fotos/Alce.jpg" alt="Alce">
 <div class="card-body">
 <div class="animal-name">Alce</div>
 <div class="animal-desc">Eles possuem uma resistência forte, 
@@ -97,7 +97,7 @@ podendo vencer até um <strong>urso pardo</strong>(seu predador natural) .</div>
 </div>
  
 <div class="card">
-<img src="fotos/Jacare.JPG" alt="Jacare">
+<img src="Fotos/Jacare.jpg" alt="Jacare">
 <div class="card-body">
 <div class="animal-name">Jacaré</div>
 <div class="animal-desc">é conhecido por ter a habilidade de
