--- a/Girafa.html
+++ b/Girafa.html
@@ -19,7 +19,7 @@
 
 
 <div class="card">
-<img src="fotos/Girafas.JPG" alt="Girafas">
+<img src="Fotos/Girafas.jpg" alt="Girafas">
 <div class="card-body">
 <div class="animal-name">Girafa</div>
 <div class="animal-desc">Assim como nós elas possuem só 7 vértebras no pescoço, apesar do tamanho.</div>
@@ -28,7 +28,7 @@
 
 
 <div class="card">
-<img src="fotos/Rinoceronte.JPG" alt="Rinoceronte">
+<img src="Fotos/Rinoceronte.jpg" alt="Rinoceronte">
 <div class="card-body">
 <div class="animal-name">Rinoceronte</div>
 <div class="animal-desc">O chifre deles não é osso, são compostos por queratina, o mesmo material das unhas e dos cabelos humanos.</div>
@@ -37,7 +37,7 @@
 
 
 <div class="card">
-<img src="fotos/Bufalo.JPG" alt="Bufalo">
+<img src="Fotos/Bufalo.jpg" alt="Bufalo">
 <div class="card-body">
 <div class="animal-name">Bufalo</div>
 <div class="animal-desc">eles adoram água e lama, eles passam horas mergulhados para refrescar e afastar insetos .</div>
@@ -46,7 +46,7 @@
 
 
 <div class="card">
-<img src="fotos/Gazela.JPG" alt="Gazela">
+<img src="Fotos/Gazela.jpg" alt="Gazela">
 <div class="card-body">
 <div class="animal-name">Gazelas</div>
 <div class="animal-desc">Mestras da velocidade, algumas epécies podem correr ate 100km por hora, ficam entre os animais mais rápidos do mundo .</div>
@@ -55,7 +55,7 @@
 
 
 <div class="card">
-<img src="fotos/Leopardo.JPG" alt="Leopardo">
+<img src="Fotos/Leopardo.jpg" alt="Leopardo">
 <div class="card-body">
 <div class="animal-name">Leopardo</div>
 <div class="animal-desc">as manchas presente neles são chamadas de rosetas, o que o diferencia de onças e jaguares.</div>
@@ -64,7 +64,7 @@
 
 
 <div class="card">
-<img src="fotos/Ocapi.JPG" alt="Ocapi">
+<img src="Fotos/Ocapi.jpg" alt="Ocapi">
 <div class="card-body">
 <div class="animal-name">Ocapi</div>
 <div class="animal-desc">A lingua deles são tão grandes que eles conseguem lamber as próprias orelhas e olhos.</div>
