--- a/Mapa.html
+++ b/Mapa.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="mapa-container">
-    <img src="fotos/Mapa.JPG" class="mapa-img">
+    <img src="Fotos/Mapa.jpg" class="mapa">
 
     <h2 class="titulo-mapa">Mapa do Zoológico</h2>
 
