--- a/Fazenda.html
+++ b/Fazenda.html
@@ -20,7 +20,7 @@
 
 
 <div class="card">
-<img src="fotos/Vaca.JPG" alt="Vaca">
+<img src="Fotos/Vaca.jpg" alt="Vaca">
 <div class="card-body">
 <div class="animal-name">Vaca</div>
 <div class="animal-desc">Vacas criam <strong>laços fortes</strong> e costumam ficar perto das mesmas companheiras todos os dias.</div>
@@ -29,7 +29,7 @@
 
 
 <div class="card">
-<img src="fotos/Touro.JPG" alt="Touro">
+<img src="Fotos/Touro.jpg" alt="Touro">
 <div class="card-body">
 <div class="animal-name">Touro</div>
 <div class="animal-desc">Por mais que muitas pessoas ainda acreditem bois <strong>não odeia</strong> a cor vermelha, pois eles são <strong>daltônicos</strong> para essa cor, o que realmente irrita é o movimento do pano..</div>
@@ -38,7 +38,7 @@
 
 
 <div class="card">
-<img src="fotos/Ovelha.JPG" alt="Ovelha">
+<img src="Fotos/Ovelha.jpg" alt="Ovelha">
 <div class="card-body">
 <div class="animal-name">Ovelha</div>
 <div class="animal-desc">Ovelhas reconhecem <strong>rostos</strong> por anos, podendo lembrar de até 50 rostos de pessoas e de outras ovelhas.</div>
@@ -47,7 +47,7 @@
 
 
 <div class="card">
-<img src="fotos/Ponei.JPG" alt="Ponei">
+<img src="Fotos/Ponei.jpg" alt="Ponei">
 <div class="card-body">
 <div class="animal-name">Ponei</div>
 <div class="animal-desc">Podem não parecer mais eles conseguem puxar carga <strong> maiores que o próprio peso</strong>.</div>
@@ -56,7 +56,7 @@
 
 
 <div class="card">
-<img src="fotos/Alpaca.JPG" alt="Alpaca">
+<img src="Fotos/alpaca.jfif" alt="Alpaca">
 <div class="card-body">
 <div class="animal-name">Alpaca</div>
 <div class="animal-desc">Elas quase <strong>não fazem barulho</strong>, se comunicam com um som suave (hummmm), muito fofo.</div>
@@ -65,7 +65,7 @@
 
 
 <div class="card">
-<img src="fotos/Lhama.JPG" alt="Lhama">
+<img src="Fotos/Lhama.jpg" alt="Lhama">
 <div class="card-body">
 <div class="animal-name">Lhama</div>
 <div class="animal-desc">São conhecidas por cuspir, mas usam isso como defesa ou demonstrar irritação, usam geralmente para outras lhamas e não para pessoas.</div>
@@ -73,7 +73,7 @@
 </div>
 
 <div class="card">
-<img src="fotos/Cabra.JPG" alt="Cabra">
+<img src="Fotos/Cabra.jpg" alt="Cabra">
 <div class="card-body">
 <div class="animal-name">Cabra</div>
 <div class="animal-desc">São escaladoras profissionais, sobem em árvores, morros e até em paredes de barragens.</div>
@@ -81,7 +81,7 @@
 </div>
 
 <div class="card">
-<img src="fotos/Pavao.JPG" alt="Pavão">
+<img src="Fotos/pavao.jpg" alt="Pavão">
 <div class="card-body">
 <div class="animal-name">Pavão</div>
 <div class="animal-desc">eles tem "olhos" nas penas que acabam assustando predadores.</div>
@@ -89,7 +89,7 @@
 </div>
  
 <div class="card">
-<img src="fotos/Peru.JPG" alt="Peru">
+<img src="Fotos/Peru.jpg" alt="Peru">
 <div class="card-body">
 <div class="animal-name">Peru</div>
 <div class="animal-desc">Só os machos fazem "glu glu glu", é para chamar atenção das fêmeas e avisar outros machos.</div>
